# shift-fastapi-service

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
shift-fastapi-service/: app.py  domain.py  exceptions.py  logs.py  main.py  models.py  repository.py  views.py
shift-fastapi-service/auth/: auth.py  views.py
shift_fastapi_service/: domain.py  exceptions.py  logs.py  main.py  models.py  repository.py  views.py
shift_fastapi_service/auth/: auth.py  views.py
tests/: conftest.py  test_auth.py  test_domain.py  test_logs.py
